--- a/say-hello-mule4-docker/buildspec.yaml
+++ b/say-hello-mule4-docker/buildspec.yaml
@@ -22,6 +22,7 @@ phases:
   build:
     commands:
       - echo Build started on date
+      - cd $PROJECT_DIR
       - echo Start Maven install
       - echo $PWD
       - ls -l 
