--- a/say-hello-mule4-docker/buildspec.yaml
+++ b/say-hello-mule4-docker/buildspec.yaml
@@ -21,7 +21,8 @@ phases:
       - echo $REPOSITORY_URI
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - echo $COMMIT_HASH
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - echo $CODEBUILD_BUILD_NUMBER
+      - IMAGE_TAG=${CODEBUILD_BUILD_NUMBER:=latest}
       - java -version 
       - mvn -version 
       - pwd
