--- a/say-hello-mule4-docker/buildspec.yaml
+++ b/say-hello-mule4-docker/buildspec.yaml
@@ -6,12 +6,12 @@ phases:
       java: corretto8
   pre_build:
     commands:
-      - echo " Installing Trivy to scan the docker image vulnerability" 
-      - apt-get install wget apt-transport-https gnupg
-      - wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | apt-key add -
-      - echo deb https://aquasecurity.github.io/trivy-repo/deb bionic main | tee -a /etc/apt/sources.list.d/trivy.list
-      - apt-get update
-      - apt-get install -y trivy
+#       - echo " Installing Trivy to scan the docker image vulnerability" 
+#       - apt-get install wget apt-transport-https gnupg
+#       - wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | apt-key add -
+#       - echo deb https://aquasecurity.github.io/trivy-repo/deb bionic main | tee -a /etc/apt/sources.list.d/trivy.list
+#       - apt-get update
+#       - apt-get install -y trivy
     
       - echo Logging in to Amazon ECR...
       - aws --version
