--- a/say-hello-mule4-docker/buildspec-sonar.yml
+++ b/say-hello-mule4-docker/buildspec-sonar.yml
@@ -29,19 +29,19 @@ phases:
       - ls $pwd
       - export PATH=$PATH:./sonar-scanner-4.7.0.2747-linux/bin/
     
-      - echo Logging in to Amazon ECR...
-      - aws --version
-      - echo $AWS_DEFAULT_REGION
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY
-      - echo $REPOSITORY_URI
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - echo $COMMIT_HASH
-      - echo $CODEBUILD_BUILD_NUMBER
-      - IMAGE_TAG=${CODEBUILD_BUILD_NUMBER:=latest}
-      - java -version 
-      - mvn -version 
-      - pwd
+      # - echo Logging in to Amazon ECR...
+      # - aws --version
+      # - echo $AWS_DEFAULT_REGION
+      # - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      # - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY
+      # - echo $REPOSITORY_URI
+      # - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      # - echo $COMMIT_HASH
+      # - echo $CODEBUILD_BUILD_NUMBER
+      # - IMAGE_TAG=${CODEBUILD_BUILD_NUMBER:=latest}
+      # - java -version 
+      # - mvn -version 
+      # - pwd
       - ls -l 
   build:
     commands:
@@ -52,30 +52,30 @@ phases:
       - cat result.json
       - if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
       - echo "Sonar scan completed"
-      - echo Build started on $(date)
-      - cd $PROJECT_DIR
-      - echo Start Maven install
-      - echo $PWD
-      - ls -l 
-      - mvn install
-      - echo Start Maven build
-      - mvn clean package
-      - echo Building the Docker image...
-      - echo $REPOSITORY_URI
-      - ls -ltr 
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      # - echo Build started on $(date)
+      # - cd $PROJECT_DIR
+      # - echo Start Maven install
+      # - echo $PWD
+      # - ls -l 
+      # - mvn install
+      # - echo Start Maven build
+      # - mvn clean package
+      # - echo Building the Docker image...
+      # - echo $REPOSITORY_URI
+      # - ls -ltr 
+      # - docker build -t $REPOSITORY_URI:latest .
+      # - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on $(date)
       # - echo "Scanning the image vulnerability"
       # - trivy image --no-progress --exit-code 1 --severity HIGH,CRITICAL $REPOSITORY_URI:$IMAGE_TAG
-      - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      - printf '[{"name":"%s","imageUri":"%s"}]' $SERVICE_NAME $REPOSITORY_URI:$IMAGE_TAG > $CODEBUILD_SRC_DIR/imagedefinitions.json
-      - cat $CODEBUILD_SRC_DIR/imagedefinitions.json
+      # - echo Pushing the Docker images...
+      # - docker push $REPOSITORY_URI:latest
+      # - docker push $REPOSITORY_URI:$IMAGE_TAG
+      # - echo Writing image definitions file...
+      # - printf '[{"name":"%s","imageUri":"%s"}]' $SERVICE_NAME $REPOSITORY_URI:$IMAGE_TAG > $CODEBUILD_SRC_DIR/imagedefinitions.json
+      # - cat $CODEBUILD_SRC_DIR/imagedefinitions.json
 cache:
   paths:
     - '/root/.m2/*/'
