--- a/say-hello-mule4-docker/buildspec.yaml
+++ b/say-hello-mule4-docker/buildspec.yaml
@@ -51,7 +51,8 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"%s","imageUri":"%s"}]' $SERVICE_NAME $REPOSITORY_URI:$IMAGE_TAG > $CODEBUILD_SRC_DIR/imagedefinitions.json
+      - printf '[{"name":"$CONTAINER_NAME","imageUri":"%s"}]' "$REPOSITORY_URI:$IMAGE_TAG" > $CODEBUILD_SRC_DIR/imagedefinitions.json
+      #- printf '[{"name":"$CONTAINER_NAME","imageUri":"%s"}]' > $CODEBUILD_SRC_DIR/imagedefinitions.json
       - cat $CODEBUILD_SRC_DIR/imagedefinitions.json
 cache:
   paths:
